--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
+  <title>NASIT demo</title>
+  <script src="vendor/p5.min.js" type="text/javascript"></script>
+  <script src="vendor/p5.play.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 </head>
 
 <body>
-  <h1>NASIT</h1>
+  <h1>NASIT demo</h1>
   <h2>#TouchLess and #GestureBase App</h2>
   <h4>Neck and Sholders interactive trainer</h4>
   <p>
