--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,25 @@
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-grid.rtl.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-utilities.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-reboot.min.css">
-
   <link rel="stylesheet" type="text/css" href="style.css">
-
-
   <meta charset="utf-8">
 </head>
 
 <body>
   <div class="container">
-
-
-    <h1>NASIT demo</h1>
-    <h2>#TouchLess and #GestureBase App</h2>
-    <h4>Neck and Sholders interactive trainer</h4>
-    <p>
-      Optimal for people spending lots of time in front of computer </p>
-
-    <p>powered by Machine Learning</p>
-    <p>using tensorflow.js and p5.js</p>
-
+    </br>
+    </br>
+    <h1 class="text-center">NASIT demo</h1>
+    <p class="text-center">Neck and Sholders interactive trainer</p>
+    <h5 class="text-center">#TouchLess and #GestureBase App</h5>
+    </br>
+    </br>
     <div class="d-flex align-items-center justify-content-center">
       <div id="nasit-canvas"></div>
     </div>
+    <footer>
+      <p class="text-end">0xMkdev Studio</p>
+    </footer>
   </div>
   <script src="sketch.js"></script>
 </body>
