--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
       <p class="text-end">0xMkdev Studio</p>
     </footer>
   </div>
+  <script src="game-state.js"></script>
+  <script src="user-input.js"></script>
   <script src="sketch.js"></script>
 </body>
 
