--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,27 @@
 <html lang="en">
 
 <head>
-  <title>NASIT demo</title>
+  <!-- p5 js -->
   <script src="vendor/js/p5.min.js" type="text/javascript"></script>
-  <script src="vendor/js/p5.play.js" type="text/javascript"></script>
+  <!-- TODO p5playjs not work with bundler -->
+  <!-- <script src="vendor/js/p5.play.js" type="text/javascript"></script> -->
+
+  <!-- bootstrap -->
   <script src="vendor/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
+  <!-- bootstrap -->
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-grid.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-grid.rtl.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-utilities.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-reboot.min.css">
+
+  <!-- custom css -->
   <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>NASIT demo</title>
 </head>
 
 <body>
@@ -43,13 +52,16 @@
       <button class="btn btn-danger" id="snap-left">Capture left</button>
       <button class="btn btn-danger" id="snap-right">Capture right</button>
     </div>
-  </br>
+    </br>
     <div class="controller d-flex align-items-center justify-content-center">
       <canvas class="webcam-stream" id="left-capture-canvas" width="224" height="224"></canvas>
       &nbsp&nbsp
       <canvas class="webcam-stream" id="right-capture-canvas" width="224" height="224"></canvas>
     </div>
-
+    <script src="game-state.js"></script>
+    <script src="user-input.js"></script>
+    <script src="webcam.js"></script>
+    <script src="sketch.js"></script>
     <script>
       const video = document.getElementById('video')
       const snapLeft = document.getElementById('snap-left')
@@ -57,17 +69,48 @@
       const leftCapCanvas = document.getElementById('left-capture-canvas')
       const rightCapCanvas = document.getElementById('right-capture-canvas')
 
-      // Get access to the camera!
-      if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-        // Not adding `{ audio: true }` since we only want video now
+      let truncatedMobileNet;
+      let model;
 
-        console.log("navigator.mediaDevices", navigator.mediaDevices)
-        navigator.mediaDevices.getUserMedia({ video: true }).then(function (stream) {
-          //video.src = window.URL.createObjectURL(stream);
-          video.srcObject = stream;
-          video.play();
-        });
+      // Loads mobilenet and returns a model that returns the internal activation
+      // we'll use as input to our classifier model.
+      async function loadTruncatedMobileNet() {
+        const mobilenet = await tf.loadLayersModel(
+          'https://storage.googleapis.com/tfjs-models/tfjs/mobilenet_v1_0.25_224/model.json');
+
+        // Return a model that outputs an internal activation.
+        const layer = mobilenet.getLayer('conv_pw_13_relu');
+        return tf.model({ inputs: mobilenet.inputs, outputs: layer.output });
       }
+
+      function predictWebcam() {
+      }
+
+      function getUserMediaSupported() {
+        return !!(navigator.mediaDevices &&
+          navigator.mediaDevices.getUserMedia);
+      }
+
+      function enableCam() {
+        // Get access to the camera!
+        if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+          // Not adding `{ audio: true }` since we only want video now
+
+          console.log("navigator.mediaDevices", navigator.mediaDevices)
+          navigator.mediaDevices.getUserMedia({ video: true }).then(function (stream) {
+            video.srcObject = stream;
+            video.addEventListener('loadeddata', predictWebcam);
+          });
+        }
+      }
+
+      if (getUserMediaSupported()) {
+        enableCam()
+      } else {
+        console.warn('getUserMedia() is not supported by your browser');
+      }
+
+
       let lCtx = leftCapCanvas.getContext('2d');
       let rCtx = rightCapCanvas.getContext('2d');
 
@@ -86,9 +129,6 @@
       <p class="text-end">0xMkdev Studio</p>
     </footer>
   </div>
-  <script src="game-state.js"></script>
-  <script src="user-input.js"></script>
-  <script src="sketch.js"></script>
 </body>
 
 </html>
