--- a/src/index.html
+++ b/src/index.html
@@ -33,95 +33,23 @@
     <div class="d-flex align-items-center justify-content-center">
       <div id="main-canvas"></div>
     </div>
-    <button id="train" type="button" class="btn btn-secondary">
-      train camera
-    </button>
-    <button id="predict" type="button" class="btn btn-danger" onclick="window.gameStateInit()">
-      play
-    </button>
     <div class="d-flex align-items-center justify-content-center">
       <div class="webcam-box">
-        <video class="webcam-stream" autoplay playsinline muted id="video" width="224" height="224"></video>
+        <video id="video" class="webcam-stream" 
+          autoplay 
+          playsinline 
+          muted
+          style="display: none;"
+          >
+      </video>
+      <canvas id="video-output"></canvas>
       </div>
-    </div>
-
-    <div class="controller text-center">
-      <button class="btn btn-danger" id="snap-left">Capture left</button>
-      <button class="btn btn-danger" id="snap-right">Capture right</button>
-    </div>
-    </br>
-    <div class="controller d-flex align-items-center justify-content-center">
-      <canvas class="webcam-stream" id="left-capture-canvas" width="224" height="224"></canvas>
-      &nbsp&nbsp
-      <canvas class="webcam-stream" id="right-capture-canvas" width="224" height="224"></canvas>
     </div>
     <script src="game-state.js"></script>
     <script src="user-input.js"></script>
     <script src="webcam.js"></script>
     <script src="sketch.js"></script>
-    <script>
-      const video = document.getElementById('video')
-      const snapLeft = document.getElementById('snap-left')
-      const snapRight = document.getElementById('snap-right')
-      const leftCapCanvas = document.getElementById('left-capture-canvas')
-      const rightCapCanvas = document.getElementById('right-capture-canvas')
-
-      let truncatedMobileNet;
-      let model;
-
-      // Loads mobilenet and returns a model that returns the internal activation
-      // we'll use as input to our classifier model.
-      async function loadTruncatedMobileNet() {
-        const mobilenet = await tf.loadLayersModel(
-          'https://storage.googleapis.com/tfjs-models/tfjs/mobilenet_v1_0.25_224/model.json');
-
-        // Return a model that outputs an internal activation.
-        const layer = mobilenet.getLayer('conv_pw_13_relu');
-        return tf.model({ inputs: mobilenet.inputs, outputs: layer.output });
-      }
-
-      function predictWebcam() {
-      }
-
-      function getUserMediaSupported() {
-        return !!(navigator.mediaDevices &&
-          navigator.mediaDevices.getUserMedia);
-      }
-
-      function enableCam() {
-        // Get access to the camera!
-        if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-          // Not adding `{ audio: true }` since we only want video now
-
-          console.log("navigator.mediaDevices", navigator.mediaDevices)
-          navigator.mediaDevices.getUserMedia({ video: true }).then(function (stream) {
-            video.srcObject = stream;
-            video.addEventListener('loadeddata', predictWebcam);
-          });
-        }
-      }
-
-      if (getUserMediaSupported()) {
-        enableCam()
-      } else {
-        console.warn('getUserMedia() is not supported by your browser');
-      }
-
-
-      let lCtx = leftCapCanvas.getContext('2d');
-      let rCtx = rightCapCanvas.getContext('2d');
-
-      // Trigger photo take
-      document.getElementById("snap-left").addEventListener("click", function () {
-        lCtx.drawImage(video, 0, 0, 224, 168);
-      });
-
-      document.getElementById("snap-right").addEventListener("click", function () {
-        rCtx.drawImage(video, 0, 0, 224, 168);
-      });
-
-    </script>
-
+    <script src="index.js"></script>
     <footer>
       <p class="text-end">0xMkdev Studio</p>
     </footer>
