UI changes after user feedback (#8)
* deleting unused stuff

* ui view changes

* activating face landmarks

* ladder height fix

--- a/src/index.html
+++ b/src/index.html
@@ -19,41 +19,20 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NASIT demo</title>
+  <title>NIT demo</title>
 </head>
 
 <body>
-  <div class="container">
-    </br>
-    <h1 class="text-center">NASIT demo</h1>
-    <p class="text-center">Neck and Sholders interactive trainer</p>
-    <h5 class="text-center">#TouchLess and #GestureBase App</h5>
-    </br>
-    </br>
-    <div class="d-flex align-items-center justify-content-center">
-      <div id="main-canvas"></div>
-    </div>
-    <div class="d-flex align-items-center justify-content-center">
-      <div class="webcam-box">
-        <video id="video" class="webcam-stream" 
-          autoplay 
-          playsinline 
-          muted
-          style="display: none;"
-          >
-      </video>
-      <canvas id="video-output"></canvas>
-      </div>
-    </div>
-    <script src="game-state.js"></script>
-    <script src="user-input.js"></script>
-    <script src="webcam.js"></script>
-    <script src="sketch.js"></script>
-    <script src="index.js"></script>
-    <footer>
-      <p class="text-end">0xMkdev Studio</p>
-    </footer>
-  </div>
+  <header>
+    <h1 class="text-center">NIT demo</h1>
+    <p class="text-center">Neck interactive trainer</p>
+  </header>
+  <div id="main-canvas"></div>
+  <video id="video" autoplay playsinline muted style="display: none;"></video>
+  <canvas id="video-output" class="bottom-right"></canvas>
+  <script src="game-state.js"></script>
+  <script src="sketch.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
