--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,22 @@
 <head>
   <!-- p5 js -->
   <script src="vendor/js/p5.min.js" type="text/javascript"></script>
-  <!-- TODO p5playjs not work with bundler -->
-  <!-- <script src="vendor/js/p5.play.js" type="text/javascript"></script> -->
-
-  <!-- bootstrap -->
-  <script src="vendor/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
   <!-- bootstrap -->
   <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-utilities.min.css">
 
   <!-- custom css -->
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NIT demo</title>
+  <title>nit demo</title>
 </head>
 
 <body>
-  <header>
-    <h1 class="text-center">NIT demo</h1>
-    <p class="text-center">Neck interactive trainer</p>
+  <header class="text-center">
+    <h3>neck interactive trainer</h3>
+    <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
   <div id="main-canvas"></div>
   <video id="video" autoplay playsinline muted style="display: none;"></video>
