--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="text-center">
-    <h3>neck interactive trainer</h3>
+    <h3>neck interactive trainer (NIT)</h3>
     <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
   <div id="main-canvas"></div>
