--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<!DOCTYPE html><html lang="en"><head><script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/p5.min.1607f229.js" type="text/javascript"></script><link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/bootstrap.min.95d7cb08.css"><link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/style.4cd036c4.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>nit demo</title></head><body> <header class="text-center"> <h3>Neck Interactive Trainer (NIT)</h3> <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p> </header> <div id="main-canvas"></div> <video id="video" autoplay playsinline="" muted style="display:none;"></video> <canvas id="video-output" class="bottom-right"></canvas> <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/game-state.a2a6145e.js"></script> <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/sketch.59c833f0.js"></script> <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/src.e154758e.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <!-- p5 js -->
+  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/p5.min.79374c4a.js" type="text/javascript"></script>
+
+  <!-- bootstrap -->
+  <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/bootstrap.min.85ba56a6.css">
+
+  <!-- custom css -->
+  <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/style.ef972121.css">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>nit demo</title>
+</head>
+
+<body>
+  <header class="text-center">
+    <h3>Neck Interactive Trainer (NIT)</h3>
+    <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+  </header>
+  <div id="main-canvas"></div>
+  <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
+  <canvas id="video-output" class="bottom-right"></canvas>
+  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/game-state.c2ce9f58.js"></script>
+  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/sketch.4249a66b.js"></script>
+  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/src.f1813369.js"></script>
+</body>
+
+</html>
