--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/favicon.ico"/>
   <!-- p5 js -->
   <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/p5.min.79374c4a.js" type="text/javascript"></script>
 
