--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" href="vendor/icon/favicon.ico"/>
   <!-- p5 js -->
   <script src="vendor/js/p5.min.js" type="text/javascript"></script>
 
