adjusting canvas elemnts sizes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" type="image/png" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/favicon.ico"/>
+  <link rel="icon" type="image/png" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/favicon.0cd98e14.ico">
   <!-- p5 js -->
   <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/p5.min.79374c4a.js" type="text/javascript"></script>
 
@@ -26,7 +26,7 @@
   <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
   <canvas id="video-output" class="bottom-right"></canvas>
   <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/game-state.c2ce9f58.js"></script>
-  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/sketch.4249a66b.js"></script>
+  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/sketch.87ac20ad.js"></script>
   <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/src.f1813369.js"></script>
 </body>
 
