--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <header class="text-center">
-    <h3>Neck Interactive Trainer (NIT)</h3>
+    <h3>Neck Interactive Trainer (NIT) Demo</h3>
     <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
   <div id="main-canvas"></div>
