--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" type="image/png" href="vendor/icon/favicon.ico"/>
+  <link rel="icon" type="image/png" href="vendor/icon/favicon.ico" />
   <!-- p5 js -->
   <script src="vendor/js/p5.min.js" type="text/javascript"></script>
 
@@ -19,6 +19,7 @@
 
 <body>
   <header class="text-center">
+    <a id="feedback" class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
     <h3>Neck Interactive Trainer (NIT) Demo</h3>
     <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
