add feedback form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/bootstrap.min.85ba56a6.css">
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/style.ef972121.css">
+  <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/style.ccb47656.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,6 +19,7 @@
 
 <body>
   <header class="text-center">
+    <a id="feedback" class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
     <h3>Neck Interactive Trainer (NIT) Demo</h3>
     <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
