add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,16 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>nit demo</title>
+  <title>Neck Interactive Trainer (NIT) Demo</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CXZ5P6LTEN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CXZ5P6LTEN');
+  </script>
 </head>
 
 <body>
