add more games like that btn that forwoards to mainling list

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,11 @@
 
 <body>
   <header class="text-center">
-    <a id="feedback" class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
+    <div id="fright" class="btn-group-vertical" role="group" aria-label="Basic example">
+      <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
+      <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">more games like
+        that!</a>
+    </div>
     <h3>Neck Interactive Trainer (NIT) Demo</h3>
     <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
