--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <header class="text-center">
-    <div id="fright" class="btn-group-vertical" role="group" aria-label="Basic example">
+    <div id="fright" class="btn-group-vertical" role="group">
       <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
       <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">more games like
         that!</a>
