--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" type="image/png" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/favicon.0cd98e14.ico">
+  <link rel="icon" type="image/png" href="https://coderdidit.com/neck-interactive-trainer-demo/favicon.0cd98e14.ico">
   <!-- p5 js -->
-  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/p5.min.79374c4a.js" type="text/javascript"></script>
+  <script src="https://coderdidit.com/neck-interactive-trainer-demo/p5.min.79374c4a.js" type="text/javascript"></script>
 
   <!-- bootstrap -->
-  <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/bootstrap.min.85ba56a6.css">
+  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/bootstrap.min.85ba56a6.css">
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="https://mkuzdowicz.com/neck-interactive-trainer-demo/style.ccb47656.css">
+  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.2aa3f897.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,16 +29,20 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
 
 <body>
   <header class="text-center">
-    <a id="feedback" class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
+    <div id="fright" class="btn-group-vertical" role="group">
+      <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
+      <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">more games like
+        that!</a>
+    </div>
     <h3>Neck Interactive Trainer (NIT) Demo</h3>
     <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
   </header>
   <div id="main-canvas"></div>
   <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
   <canvas id="video-output" class="bottom-right"></canvas>
-  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/game-state.c2ce9f58.js"></script>
-  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/sketch.9cff7fc7.js"></script>
-  <script src="https://mkuzdowicz.com/neck-interactive-trainer-demo/src.31485282.js"></script>
+  <script src="https://coderdidit.com/neck-interactive-trainer-demo/game-state.c2ce9f58.js"></script>
+  <script src="https://coderdidit.com/neck-interactive-trainer-demo/sketch.9cff7fc7.js"></script>
+  <script src="https://coderdidit.com/neck-interactive-trainer-demo/src.31485282.js"></script>
 </body>
 
 </html>
