--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,16 @@
 </head>
 
 <body>
-  <header class="text-center">
-    <div id="fright" class="btn-group-vertical" role="group">
+  <header>
+    <div id="head-btns" class="btn-group-vertical" role="group">
       <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
       <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">more games like
         that!</a>
     </div>
-    <h3>Neck Interactive Trainer (NIT) Demo</h3>
-    <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+    <div id="head-text">
+      <h3>Neck Interactive Trainer (NIT) Demo</h3>
+      <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+    </div>
   </header>
   <div id="main-canvas"></div>
   <video id="video" autoplay playsinline muted style="display: none;"></video>
