--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/bootstrap.min.85ba56a6.css">
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.2aa3f897.css">
+  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.314ec4d9.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,14 +28,16 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
 </head>
 
 <body>
-  <header class="text-center">
-    <div id="fright" class="btn-group-vertical" role="group">
+  <header>
+    <div id="head-btns" class="btn-group-vertical" role="group">
       <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
       <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">more games like
         that!</a>
     </div>
-    <h3>Neck Interactive Trainer (NIT) Demo</h3>
-    <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+    <div id="head-text">
+      <h3>Neck Interactive Trainer (NIT) Demo</h3>
+      <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+    </div>
   </header>
   <div id="main-canvas"></div>
   <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
