--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <!-- bootstrap -->
   <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/bootstrap.min.85ba56a6.css">
 
+  <!-- fonts -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.314ec4d9.css">
+  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.f62a3455.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,9 +33,11 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
 <body>
   <header>
     <div id="head-btns" class="btn-group-vertical" role="group">
-      <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">feedback</a>
-      <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">more games like
-        that!</a>
+      <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
+        feedback</a>
+      <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
+        sign up for more
+      </a>
     </div>
     <div id="head-text">
       <h3>Neck Interactive Trainer (NIT) Demo</h3>
@@ -41,6 +46,13 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
   </header>
   <div id="main-canvas"></div>
   <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
+  <!-- Youtube -->
+  <div id="find-me-on-btns">
+    <a target="_blank" id="find-me-on-yt" class="btn btn-primary" href="https://www.youtube.com/watch?v=oGzIsQnsTTA" role="button">
+      How to Play
+      <i class="fab fa-youtube"></i>
+    </a>
+  </div>
   <canvas id="video-output" class="bottom-right"></canvas>
   <script src="https://coderdidit.com/neck-interactive-trainer-demo/game-state.c2ce9f58.js"></script>
   <script src="https://coderdidit.com/neck-interactive-trainer-demo/sketch.9cff7fc7.js"></script>
