--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button id="change-camera-btn" type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
