--- a/src/index.html
+++ b/src/index.html
@@ -49,16 +49,14 @@
   <div id="main-canvas"></div>
   <video id="video" autoplay playsinline muted style="display: none;"></video>
   <!-- Youtube -->
-  <div id="find-me-on-btns">
+  <div>
     <a target="_blank" id="find-me-on-yt" class="btn btn-primary" href="https://www.youtube.com/watch?v=oGzIsQnsTTA"
       role="button">
       How to Play
       <i class="fab fa-youtube"></i>
     </a>
   </div>
-  <!-- camera setup -->
-  <button id="switch-camera-btn" type="button" class="btn btn-info btn-sm bottom-right" data-bs-toggle="modal" data-bs-target="#exampleModal">switch camera</button>
-  <!-- Modal -->
+   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -81,6 +79,8 @@
     </div>
   </div>
   <!--  -->
+  <!-- camera setup -->
+  <button id="switch-camera-btn" type="button" class="btn btn-info btn-sm bottom-right" data-bs-toggle="modal" data-bs-target="#exampleModal">switch camera</button>
   <canvas id="video-output" class="bottom-right"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
