setup game on click

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
   </header>
   <div id="welcom-bg">
     <div id="welcom-bg-container" class="text-center">
-      <button type="button" class="btn btn-danger align-self-center">play 🎮</button>
+      <button id="play-btn" type="button" class="btn btn-danger align-self-center">play 🎮</button>
       <br>
       <br>
       <p>you will need to allow acces to your webcam/camera 📷</p>
