--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.f62a3455.css">
+  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.fe922956.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,7 +44,15 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
       <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
     </div>
   </header>
-  <div id="main-canvas"></div>
+  <div id="welcom-bg">
+    <div id="welcom-bg-container" class="text-center">
+      <button id="play-btn" type="button" class="btn btn-danger align-self-center">play 🎮</button>
+      <br>
+      <br>
+      <p>you will need to allow acces to your webcam/camera 📷</p>
+    </div>
+  </div>
+  <div style="display: none;" id="main-canvas"></div>
   <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
   <!-- Youtube -->
   <div id="find-me-on-btns">
@@ -53,10 +61,10 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
       <i class="fab fa-youtube"></i>
     </a>
   </div>
-  <canvas id="video-output" class="bottom-right"></canvas>
+  <canvas style="display: none;" id="video-output" class="bottom-right"></canvas>
   <script src="https://coderdidit.com/neck-interactive-trainer-demo/game-state.c2ce9f58.js"></script>
   <script src="https://coderdidit.com/neck-interactive-trainer-demo/sketch.9cff7fc7.js"></script>
-  <script src="https://coderdidit.com/neck-interactive-trainer-demo/src.31485282.js"></script>
+  <script src="https://coderdidit.com/neck-interactive-trainer-demo/src.3a3c796e.js"></script>
 </body>
 
 </html>
