--- a/src/index.html
+++ b/src/index.html
@@ -30,20 +30,20 @@
 </head>
 
 <body>
-  <header>
+  <header class="container-fluid">
     <div id="head-btns" class="btn-group-vertical" role="group">
       <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
         feedback</a>
       <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
-        sign up for more
+        more
       </a>
     </div>
     <div id="head-text">
-      <h3>Neck Interactive Trainer (NIT) Demo</h3>
+      <h4>Neck Interactive Trainer</h4>
       <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
     </div>
   </header>
-  <div id="welcom-bg">
+  <div id="welcom-bg" class="container-fluid">
     <div id="welcom-bg-container" class="text-center">
       <button id="play-btn" type="button" class="btn btn-danger align-self-center">play 🎮</button>
       <br>
