--- a/src/index.html
+++ b/src/index.html
@@ -30,19 +30,21 @@
 </head>
 
 <body>
-  <header class="container-fluid">
-    <div id="head-btns" class="btn-group-vertical" role="group">
-      <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
-        feedback</a>
-      <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
-        more
-      </a>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <div>
+        <h4>Neck Interactive Trainer</h4>
+        <p>strech 💪&nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+      </div>
+      <div role="group">
+        <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
+          feedback</a>
+        <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
+          more
+        </a>
+      </div>
     </div>
-    <div id="head-text">
-      <h4>Neck Interactive Trainer</h4>
-      <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
-    </div>
-  </header>
+  </nav>
   <div id="welcom-bg" class="container-fluid">
     <div id="welcom-bg-container" class="text-center">
       <button id="play-btn" type="button" class="btn btn-danger align-self-center">play 🎮</button>
