--- a/src/index.html
+++ b/src/index.html
@@ -32,16 +32,18 @@
 <body>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <div>
-        <h4>Neck Interactive Trainer</h4>
-        <p>strech 💪&nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
-      </div>
-      <div role="group">
-        <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
-          feedback</a>
-        <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
-          more
-        </a>
+      <div class="d-flex bd-highlight">
+        <div class="p-2 bd-highlight">
+          <h4>Neck Interactive Trainer</h4>
+          <p>strech 💪&nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
+        </div>
+        <div class="p-2 bd-highlight btn-group-vertical" role="group">
+          <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
+            feedback</a>
+          <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
+            more
+          </a>
+        </div>
       </div>
     </div>
   </nav>
@@ -56,7 +58,7 @@
   <div style="display: none;" id="main-canvas"></div>
   <video id="video" autoplay playsinline muted style="display: none;"></video>
   <!-- Youtube -->
-  <div id="find-me-on-btns">
+  <div id="how-to-play">
     <a target="_blank" id="find-me-on-yt" class="btn btn-primary" href="https://www.youtube.com/watch?v=oGzIsQnsTTA"
       role="button">
       How to Play
