--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,17 @@
 <body>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <div class="d-flex bd-highlight">
-        <div class="p-2 bd-highlight">
-          <h4>Neck Interactive Trainer</h4>
-          <p>strech 💪&nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
-        </div>
-        <div class="p-2 bd-highlight btn-group-vertical" role="group">
-          <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
-            feedback</a>
-          <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
-            more
-          </a>
-        </div>
+      <div id="nav-text" class="float-start">
+        <h4>Neck Interactive Trainer</h4>
+        <p>strech 💪&nbsp your neck</p> 
+        <p>and move the ball &nbsp🏈&nbsp up 🎉</p>
+      </div>
+      <div class="float-end btn-group-vertical" role="group">
+        <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
+          feedback</a>
+        <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
+          more
+        </a>
       </div>
     </div>
   </nav>
