style changes for mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.fe922956.css">
+  <link rel="stylesheet" type="text/css" href="https://coderdidit.com/neck-interactive-trainer-demo/style.891393b6.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,20 +31,23 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
 </head>
 
 <body>
-  <header>
-    <div id="head-btns" class="btn-group-vertical" role="group">
-      <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
-        feedback</a>
-      <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
-        sign up for more
-      </a>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <div id="nav-text" class="float-start">
+        <h4>Neck Interactive Trainer</h4>
+        <p>strech 💪&nbsp your neck</p> 
+        <p>and move the ball &nbsp🏈&nbsp up 🎉</p>
+      </div>
+      <div class="float-end btn-group-vertical" role="group">
+        <a class="btn btn-info" target="_blank" href="https://forms.gle/RPh7GPKhrTFHUn2y7">
+          feedback</a>
+        <a class="btn btn-danger" target="_blank" href="https://coderdidit.ck.page/4acedad139">
+          more
+        </a>
+      </div>
     </div>
-    <div id="head-text">
-      <h3>Neck Interactive Trainer (NIT) Demo</h3>
-      <p>start to do some streches &nbsp💪 &nbsp and move the ball &nbsp🏈 &nbsp up 🎉</p>
-    </div>
-  </header>
-  <div id="welcom-bg">
+  </nav>
+  <div id="welcom-bg" class="container-fluid">
     <div id="welcom-bg-container" class="text-center">
       <button id="play-btn" type="button" class="btn btn-danger align-self-center">play 🎮</button>
       <br>
@@ -55,7 +58,7 @@ gtag('config', 'G-CXZ5P6LTEN');</script>
   <div style="display: none;" id="main-canvas"></div>
   <video id="video" autoplay="" playsinline="" muted="" style="display: none;"></video>
   <!-- Youtube -->
-  <div id="find-me-on-btns">
+  <div id="how-to-play">
     <a target="_blank" id="find-me-on-yt" class="btn btn-primary" href="https://www.youtube.com/watch?v=oGzIsQnsTTA" role="button">
       How to Play
       <i class="fab fa-youtube"></i>
